[gd_scene load_steps=9 format=2]

[ext_resource path="res://imagens/imigo alien.png" type="Texture" id=1]
[ext_resource path="res://script-alien.gd" type="Script" id=2]
[ext_resource path="res://imagens/Raio.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.125, 31.4749 )

[sub_resource type="Animation" id=2]
resource_name = "Andando"
length = 1.36
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1, 1.04, 1.08, 1.12, 1.16, 1.2, 1.24, 1.28, 1.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 1, 1, 49, 43 ), Rect2( 55, 1, 49, 43 ), Rect2( 108, 2, 48, 42 ), Rect2( 161, 2, 48, 42 ), Rect2( 214, 2, 48, 42 ), Rect2( 267, 2, 48, 42 ), Rect2( 320, 2, 48, 42 ), Rect2( 373, 2, 48, 42 ), Rect2( 427, 2, 48, 42 ), Rect2( 481, 2, 48, 42 ), Rect2( 534, 2, 48, 42 ), Rect2( 587, 2, 48, 42 ), Rect2( 640, 2, 48, 42 ), Rect2( 693, 2, 48, 42 ), Rect2( 746, 2, 48, 42 ), Rect2( 799, 2, 48, 42 ), Rect2( 1, 49, 49, 43 ), Rect2( 55, 49, 50, 43 ), Rect2( 110, 50, 50, 42 ), Rect2( 165, 50, 51, 42 ), Rect2( 278, 50, 51, 42 ), Rect2( 334, 50, 51, 42 ), Rect2( 390, 50, 52, 42 ), Rect2( 448, 50, 52, 42 ), Rect2( 506, 50, 52, 42 ), Rect2( 563, 50, 52, 42 ), Rect2( 620, 50, 50, 42 ), Rect2( 675, 50, 48, 42 ), Rect2( 728, 50, 48, 42 ), Rect2( 781, 50, 48, 42 ), Rect2( 834, 50, 48, 42 ), Rect2( 1, 98, 49, 43 ), Rect2( 55, 97, 47, 44 ), Rect2( 107, 97, 44, 44 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Atirando"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 1, 246, 49, 43 ), Rect2( 63, 246, 49, 43 ), Rect2( 124, 246, 47, 43 ), Rect2( 182, 246, 47, 43 ), Rect2( 241, 246, 46, 43 ), Rect2( 302, 246, 46, 43 ), Rect2( 356, 246, 45, 43 ), Rect2( 412, 246, 44, 43 ), Rect2( 460, 246, 53, 43 ), Rect2( 519, 250, 54, 39 ), Rect2( 579, 251, 54, 38 ), Rect2( 640, 251, 69, 38 ), Rect2( 716, 252, 70, 37 ), Rect2( 800, 253, 67, 36 ), Rect2( 895, 254, 55, 35 ), Rect2( 957, 253, 52, 36 ), Rect2( 1014, 252, 53, 37 ), Rect2( 1073, 247, 53, 42 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Descendo"
length = 0.64
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 10, 157, 28, 27 ), Rect2( 43, 157, 29, 27 ), Rect2( 79, 157, 28, 27 ), Rect2( 124, 157, 30, 27 ), Rect2( 168, 157, 29, 27 ), Rect2( 208, 157, 30, 27 ), Rect2( 243, 157, 28, 27 ), Rect2( 276, 157, 29, 27 ), Rect2( 311, 157, 28, 27 ), Rect2( 344, 157, 29, 27 ), Rect2( 379, 157, 28, 27 ), Rect2( 412, 157, 29, 27 ), Rect2( 447, 157, 28, 27 ), Rect2( 480, 157, 29, 27 ), Rect2( 515, 157, 28, 27 ), Rect2( 548, 157, 29, 27 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Morrendo"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 2,
"values": [ Rect2( 1, 300, 48, 43 ), Rect2( 55, 300, 48, 43 ), Rect2( 109, 300, 49, 43 ), Rect2( 165, 300, 47, 43 ), Rect2( 220, 300, 50, 43 ), Rect2( 276, 300, 50, 43 ), Rect2( 331, 300, 46, 43 ), Rect2( 381, 300, 46, 43 ), Rect2( 431, 300, 47, 43 ), Rect2( 482, 300, 47, 43 ), Rect2( 534, 300, 49, 43 ), Rect2( 590, 301, 49, 42 ), Rect2( 646, 304, 49, 39 ), Rect2( 702, 302, 49, 41 ), Rect2( 759, 295, 48, 48 ), Rect2( 812, 306, 51, 37 ), Rect2( 868, 306, 51, 37 ), Rect2( 924, 306, 51, 37 ), Rect2( 980, 308, 51, 35 ), Rect2( 1036, 309, 52, 34 ), Rect2( 1093, 310, 52, 33 ), Rect2( 1, 355, 51, 31 ), Rect2( 57, 357, 51, 29 ), Rect2( 113, 363, 51, 23 ), Rect2( 169, 367, 51, 19 ), Rect2( 225, 366, 51, 20 ), Rect2( 281, 368, 51, 18 ), Rect2( 337, 364, 50, 22 ), Rect2( 392, 362, 48, 24 ), Rect2( 445, 360, 48, 26 ), Rect2( 498, 359, 48, 27 ), Rect2( 551, 371, 42, 15 ), Rect2( 604, 373, 41, 13 ), Rect2( 657, 374, 40, 12 ), Rect2( 711, 375, 32, 11 ), Rect2( 756, 376, 33, 10 ), Rect2( 799, 376, 36, 10 ), Rect2( 840, 378, 42, 8 ), Rect2( 887, 379, 43, 7 ), Rect2( 935, 381, 43, 5 ), Rect2( 983, 382, 34, 4 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( -4.875, 3.625 )
__meta__ = {
"_edit_group_": true
}

[node name="Alien" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Alien"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Alien"]
scale = Vector2( 1.32552, 1.37202 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 168, 157, 29, 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Alien"]
autoplay = "Descendo"
anims/Andando = SubResource( 2 )
anims/Atirando = SubResource( 3 )
anims/Descendo = SubResource( 5 )
anims/Morrendo = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="Alien"]
position = Vector2( -23.75, -0.875 )

[node name="raio-trator" type="Sprite" parent="Alien"]
position = Vector2( 0.5, -517 )
scale = Vector2( 0.194444, 0.692628 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Alien" to="Alien" method="colisao_com_tiro"]
[connection signal="body_entered" from="Alien" to="Alien" method="colisao"]
[connection signal="animation_changed" from="Alien/AnimationPlayer" to="Alien" method="garante_que_morreu"]
[connection signal="animation_finished" from="Alien/AnimationPlayer" to="Alien" method="finalizar_acao"]
[connection signal="timeout" from="Timer" to="Alien" method="atirar"]
